# MasterThesisCode

./: .editorconfig  .gardener-notes.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DATA_INVENTORY.md  LICENSE  README.md  TODO.md  conda-lock.yml  environment.yml  install.sh  pyproject.toml  simulation_configuration.json  test.py  update.sh
.claude/agents/: gpd-bibliographer.md  gpd-consistency-checker.md  gpd-debugger.md  gpd-executor.md  gpd-experiment-designer.md  gpd-explainer.md  gpd-literature-reviewer.md  gpd-notation-coordinator.md  gpd-paper-writer.md  gpd-phase-researcher.md  gpd-plan-checker.md  gpd-planner.md  gpd-project-researcher.md  gpd-referee.md  gpd-research-mapper.md  gpd-research-synthesizer.md  gpd-review-literature.md  gpd-review-math.md  gpd-review-physics.md  gpd-review-reader.md  gpd-review-significance.md  gpd-roadmapper.md  gpd-verifier.md  gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-code-reviewer.md  gsd-codebase-mapper.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-doc-verifier.md  gsd-doc-writer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  (+17 more)
.claude/skills/: gsd-add-backlog  gsd-add-phase  gsd-add-tests  gsd-add-todo  gsd-ai-integration-phase  gsd-analyze-dependencies  gsd-audit-fix  gsd-audit-milestone  gsd-audit-uat  gsd-autonomous  gsd-check-todos  gsd-cleanup  gsd-code-review  gsd-code-review-fix  gsd-complete-milestone  gsd-debug  gsd-discuss-phase  gsd-do  gsd-docs-update  gsd-eval-review  gsd-execute-phase  gsd-explore  gsd-extract_learnings  gsd-fast  gsd-forensics  gsd-from-gsd2  gsd-graphify  gsd-health  gsd-help  gsd-import  gsd-inbox  gsd-ingest-docs  gsd-insert-phase  gsd-intel  gsd-join-discord  gsd-list-phase-assumptions  gsd-list-workspaces  gsd-manager  gsd-map-codebase  gsd-milestone-summary  (+41 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  physics_bug.yml
.github/workflows/: ci.yml
.gpd/: DERIVATION-STATE.md  HANDOFF-phase45-diagnosis.md  HANDOFF-phase45.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  state.json  state.json.bak
.gpd/debug/: h0-posterior-bias-worsening.md  map-0p86-lcat-explosion.md
.gpd/milestones/: v1.2.2-REQUIREMENTS.md  v1.2.2-ROADMAP.md
.gpd/research-map/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  FORMALISM.md  REFERENCES.md  (+2 more)
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  audit_coordinate_bug.json  audit_coordinate_bug.md  config.json
analysis/: grid_quality.py  importance_sampling.py  injection_yield.py  sampling_design.py  validation.py
cluster/: README.md  combine.sbatch  evaluate.sbatch  extract_validation_results.py  gpu_smoke.sbatch  inject.sbatch  merge.sbatch  modules.sh  quick_validation.sh  resubmit_failed.sh  setup.sh  simulate.sbatch  submit_equatorial_revert_eval.sh  submit_gpu_smoke.sh  submit_injection.sh  submit_phase44_eval.sh  submit_phase45_eval.sh  submit_pipeline.sh
derivations/: dark_siren_likelihood.md
docs/: H0_BIAS_RESOLUTION.md  make.bat
evaluation/: mean_bounds.xlsx
interactive/: combined_posterior.html  fisher_ellipses.html  h0_convergence.html  index.html  m_z_improvement.html  sky_map.html
master_thesis_code/: LISA_configuration.py  __main__.py  arguments.py  callbacks.py  constants.py  cosmological_model.py  decorators.py  estimate_hubble_constant.py  evaluate_profiling.py  exceptions.py  main.py  memory_management.py  merge_cramer_rao_bounds.py  physical_relations.py  prepare_detections.py  remove_detections_out_of_bounds.py  waveform_generator.py
master_thesis_code_test/: LISA_configuration_test.py  conftest.py  cosmological_model_test.py  decorators_test.py  physical_relations_test.py  test_arguments.py  test_benchmarks.py  test_completion_term.py  test_completion_term_fix.py  test_constants.py  test_coordinate_roundtrip.py  test_generate_figures.py  test_glade_completeness.py  test_interactive.py  test_l_cat_equivalence.py  test_main_metadata.py  test_memory_management.py  test_migrate_crb_to_ecliptic.py  test_parameter_space_h.py
notebooks/: parameter_estimation.ipynb  parameter_estimation_schwarzschild.ipynb
paper/: PAPER-CONFIG.json  main.tex  references.bib
results/: combined_posterior_seed200.json  v1.4-validation.md
scripts/: audit_coordinate_bug.py  compare_posterior_bias.py  compare_validation_runs.py  estimate_hubble_constant.py  generate_phase36_regression.py  merge_cramer_rao_bounds.py  merge_injections.py  migrate_crb_to_ecliptic.py  prepare_detections.py  quick_snr_calibration.py  quick_validation_15.py  remove_detections_out_of_bounds.py
simulations/: cramer_rao_bounds.csv  cramer_rao_bounds_in_SSB.csv  cramer_rao_bounds_squared_SNR.csv  cramer_rao_bounds_unbiased.csv  snr_analysis.csv  undetected_events_unbiased.csv
(+747 files in other folders)
