[project]
name = "master-thesis-code"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "emcee",
    "tabulate",
    "fastlisaresponse",
    "astropy>=6.1.7",
    "corner>=2.2.3",
]

[project.optional-dependencies]
cpu = [
    "fastemriwaveforms==2.0.0rc1",
]
gpu = [
    "fastemriwaveforms-cuda12x",
    "fastlisaresponse-cuda12x",
    "lisaanalysistools-cuda12x",
    "cupy-cuda12x",
    "GPUtil",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pip-audit",
    "mypy",
    "jupyterlab",
    "ruff",
    "pre-commit",
    "sphinx>=8.1.3",
    "furo>=2025.12.19",
    "sphinx-copybutton>=0.5.2",
]

[project.scripts]
emri-merge = "scripts.merge_cramer_rao_bounds:main"
emri-prepare = "scripts.prepare_detections:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "astropy",
    "astropy.*",
    "cupy.*",
    "cupyx.*",
    "fastlisaresponse.*",
    "few.*",
    "GPUtil.*",
    "pandas.*",
    "scipy.*",
    "sklearn.*",
    "mpl_toolkits.*",
    "emcee.*",
    "tabulate.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade — flags List/Dict/Optional from typing (enforces CLAUDE.md)
    "B",   # flake8-bugbear (mutable defaults, common bugs)
    "N",   # pep8 naming
]
ignore = [
    "E501",  # line length — handled by ruff format
    "E402",  # module-level import not at top — needed for mpl.rcParams before imports
    "B006",  # mutable default arguments — existing code uses these intentionally
    "B905",  # zip() without strict= — existing code pattern
    "N802",  # function name should be lowercase — physics names use uppercase
    "N803",  # argument name should be lowercase — physics names use uppercase
    "N806",  # variable in function should be lowercase — physics names use uppercase
    "N815",  # class variable mixed case — physics names
    "N816",  # class variable mixed case — physics names
    "N999",  # invalid module name — LISA_configuration.py cannot be renamed
    "B007",  # loop variable not used — common pattern
    "B904",  # raise in except without from — existing code pattern
    "F841",  # local variable assigned but never used — existing dead code patterns
]

[tool.ruff.lint.isort]
known-first-party = ["master_thesis_code"]

[tool.pytest.ini_options]
testpaths = ["master_thesis_code_test"]
addopts = "-v --tb=short --cov=master_thesis_code --cov-report=term-missing --cov-report=xml"
markers = [
    "gpu: requires CUDA GPU and cupy — skip with '-m not gpu'",
    "slow: long-running test (>10s)",
]

[tool.coverage.run]
source = ["master_thesis_code"]
omit = [
    "master_thesis_code_test/*",
    "master_thesis_code/*/_generated/*",
]

[tool.coverage.report]
fail_under = 25
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
